# strategy-simulator

./: .coveragerc  .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-llm.txt  requirements.txt  run_test.py
.github/workflows/: ci.yaml  coverage.yaml  test.yaml
configs/: backtest.yaml  default.yml
data/: samples_headline.csv  sentiment_panel.parquet  sentiment_panel_sample.parquet
doc/: architecture.md  factor_definitions.md
docs/: data_definitions.md
reports/: report.md
scripts/: make_fake_panel.py  run_backtest.py
src/: backtest.py  datasets.py  factors.py  metrics.py  plots.py  public_api.py
strategy_simulator/: backtest.py  llm_sentiment.py  plots.py  public_api.py
tests/: conftest.py  test_backtest.py  test_conf.py  test_datasets.py  test_factors.py  test_llm.py  test_metrics.py  test_plots.py  test_public_api.py
