[tool.black]
line-length = 175
target-version = ["py312"]

[tool.ruff]
line-length = 175
src = ["strategy_simulator", "."]
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "C4", "TID", "PL", "PERF", "RUF"]
ignore = [
    "E203",
    "PLC0415",
    "PLR0913"
]

[tool.ruff.lint.isort]
known-first-party = ["strategy-simulator"]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
strict_optional = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra -q --strict-markers --disable-warnings"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["strategy_simulator"]
omit = [
  "tests/*",
  "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85
exclude_also = [
  "if __name__ == .__main__.:",
  "pragma: no cover",
]

# strategy-simulator/pyproject.toml
[project]
name = "strategy-simulator"
version = "0.1.1"
requires-python = ">=3.10"
dependencies = ["pandas","numpy","matplotlib","yfinance","scipy","pyyaml","pyarrow"]

[build-system]
requires = ["setuptools","wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["strategy_simulator*"]
exclude = ["data*"]
